--- a/kmtmg/kmtmg-Info.plist
+++ b/kmtmg/kmtmg-Info.plist
@@ -116,11 +116,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.00</string>
+	<string>0.03</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1A00</string>
+	<string>0C00</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.productivity</string>
 	<key>LSMinimumSystemVersion</key>
