--- a/kmtmg/kmtmg-Info.plist
+++ b/kmtmg/kmtmg-Info.plist
@@ -15,6 +15,8 @@
 			<string>KmtmgDocumentType</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
 			<key>NSDocumentClass</key>
 			<string>MyDocument</string>
 		</dict>
