--- a/kmtmg/en.lproj/menuconfig.config
+++ b/kmtmg/en.lproj/menuconfig.config
@@ -69,7 +69,7 @@ _3-9	@			D_Tri		Triangle		TOOLBAR		2	1
 _3-10	@			D_Rect		Rectangle		TOOLBAR		@	2
 _3-11	@			D_Pent		Pentagon		TOOLBAR		@	3
 _3-12	@			D_Hexi		Hexagon 		TOOLBAR		@	4
-_3-13	@			D_Hisi		lozenge			TOOLBAR		@	5
+_3-13	@			D_Hisi		Rhombus			TOOLBAR		@	5
 _3-14	@			D_nAngles	InputPolygon	TOOLBAR		@	6
 _3-15	@			D_Paint		Paint			TOOLBAR		@	7
 _3-15	@			D_Paint2	Paint2			TOOLBAR		@	8
