Fixed to key assign at Menu and funcCommand.

--- a/kmtmg/en.lproj/menuconfig.config
+++ b/kmtmg/en.lproj/menuconfig.config
@@ -52,9 +52,9 @@ _1-3    @           A_TEST      TEST
 _2-1	View		M_AddView	Add
 _2-2	@			SUBPAGE_6	Scale
 _2-3	@			SUBPAGE_7	Ratio
-_2-4	@			V_Grid		Grid            CTRL+G
-_2-5	@			V_PosOrg	Origin          H
-_2-6	@			V_PosEnd	End             E
+_2-4	@			V_Grid		Grid            CTRL+g
+_2-5	@			V_PosOrg	Origin          h
+_2-6	@			V_PosEnd	End             e
 _2-7	@			A_Toolbar	ToolMenu        SPACE
 
 _3-1	Draw		D_Plot		Dot				TOOLBAR		1	1
