--- a/kmtmg/kmtmg-Info.plist
+++ b/kmtmg/kmtmg-Info.plist
@@ -104,6 +104,18 @@
 			<key>NSPersistentStoreTypeKey</key>
 			<string>XML</string>
 		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>cgs</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>JTSCGSDataImage</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>NSDocumentClass</key>
+			<string>MyDocument</string>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
